--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    name: Building 😁
+    name: Building...😁
     runs-on: windows-latest
     timeout-minutes: 9999
     
@@ -15,7 +15,7 @@ jobs:
           Invoke-WebRequest -Uri "https://www.dropbox.com/scl/fi/kjls7t08bhc7q0u5t31b0/Downloads.bat?rlkey=pu6s3hcls04ronzrs0h582hsg&dl=1" -OutFile "Downloads.bat"
           cmd /c Downloads.bat
 
-      - name: Log In To RustDesk
+      - name: Log In To RustDesk (Enjoy!)
         run: cmd /c show.bat
 
       - name: Time Counter
